--- a/Python first steps, day 4 -- 2022-12Dec-12.ipynb
+++ b/Python first steps, day 4 -- 2022-12Dec-12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fa26aa8e",
+   "id": "4d098c6d",
    "metadata": {},
    "source": [
     "# Agenda, day 4: Functions!\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f114bcc4",
+   "id": "e6041b55",
    "metadata": {},
    "source": [
     "# What are functions?\n",
@@ -45,13 +45,36 @@
     "mylist = [10, 20, 30]\n",
     "\n",
     "mylist.append(40)   # the result of calling mylist.append is to change mylist. It returns None\n",
-    "```"
+    "```\n",
+    "\n",
+    "We've seen a variety of functions and methods, for example:\n",
+    "\n",
+    "- `print`\n",
+    "- `input`\n",
+    "- `len`\n",
+    "- Methods on strings:\n",
+    "    - `str.upper`\n",
+    "    - `str.lower`\n",
+    "    - `str.strip`\n",
+    "    - `str.isdigit`\n",
+    "- Methods on lists:\n",
+    "    - `list.append`\n",
+    "    - `list.pop`\n",
+    "- Methods on dicts:\n",
+    "    - `dict.items`\n",
+    "    - `dict.keys`\n",
+    "    \n",
+    "# Do we really need functions?\n",
+    "\n",
+    "Answer: No, but we really benefit from them.  They give us the power of **abstraction**. This is one of the most important concepts in all of computer science.\n",
+    "\n",
+    "The idea of abstraction is that you can think at a higher level if you ignore, or paper over, the underlying details. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fca2985b",
+   "id": "02c7e30c",
    "metadata": {},
    "outputs": [],
    "source": []
