--- a/Python first steps, day 4 -- 2022-12Dec-12.ipynb
+++ b/Python first steps, day 4 -- 2022-12Dec-12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3ca49fa8",
+   "id": "759e4c22",
    "metadata": {},
    "source": [
     "# Agenda, day 4: Functions!\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7992cfc9",
+   "id": "c18a2b1d",
    "metadata": {},
    "source": [
     "# What are functions?\n",
@@ -72,12 +72,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e579b026",
+   "cell_type": "markdown",
+   "id": "12fe5dfe",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# To define a new function:\n",
+    "\n",
+    "- We'll use the `dfe` "
+   ]
   }
  ],
  "metadata": {
