--- a/Python first steps, day 4 -- 2022-12Dec-12.ipynb
+++ b/Python first steps, day 4 -- 2022-12Dec-12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "759e4c22",
+   "id": "fdf9218b",
    "metadata": {},
    "source": [
     "# Agenda, day 4: Functions!\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c18a2b1d",
+   "id": "fc6fa3bb",
    "metadata": {},
    "source": [
     "# What are functions?\n",
@@ -73,12 +73,41 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12fe5dfe",
+   "id": "28d22038",
    "metadata": {},
    "source": [
     "# To define a new function:\n",
     "\n",
-    "- We'll use the `dfe` "
+    "- We'll use the `def` keyword\n",
+    "- We need to give the function a name\n",
+    "- We need to decide what parameters (variables that get values assigned when the function is called) the function will have\n",
+    "- We need to write the function's body, which can contain *any* Python code we want, including `if`, `with`, `while`, `for`, and anything else you can imagine."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "cedc091a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# let's create a simple function that prints \"Hello!\"\n",
+    "\n",
+    "def hello():         # no parameters -- empty parentheses\n",
+    "    print('Hello!')  # function body has 1 line, printing \"Hello!\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "046539a9",
+   "metadata": {},
+   "source": [
+    "# What happens when I define a function?\n",
+    "\n",
+    "1. I create a new \"function object.\"\n",
+    "2. I assign that function object to a variable -- in this case, to `hello`.\n",
+    "\n",
+    "What does this mean to have a \"function object\"? In Python, functions aren't just verbs -- they're also nouns. "
    ]
   }
  ],
