--- a/Python first steps, day 4 -- 2022-12Dec-12.ipynb
+++ b/Python first steps, day 4 -- 2022-12Dec-12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fdf9218b",
+   "id": "c7feb858",
    "metadata": {},
    "source": [
     "# Agenda, day 4: Functions!\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc6fa3bb",
+   "id": "c1d18be1",
    "metadata": {},
    "source": [
     "# What are functions?\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28d22038",
+   "id": "0f50d4ad",
    "metadata": {},
    "source": [
     "# To define a new function:\n",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cedc091a",
+   "id": "98bbce29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "046539a9",
+   "id": "4cea7fe8",
    "metadata": {},
    "source": [
     "# What happens when I define a function?\n",
@@ -107,7 +107,44 @@
     "1. I create a new \"function object.\"\n",
     "2. I assign that function object to a variable -- in this case, to `hello`.\n",
     "\n",
-    "What does this mean to have a \"function object\"? In Python, functions aren't just verbs -- they're also nouns. "
+    "What does this mean to have a \"function object\"? In Python, functions aren't just verbs -- they're also nouns. When we define a function, we're creating a function object, which can (in theory) be stored in a variable, or in a list, or in a dict.  We're not going to do that here, but you can.\n",
+    "\n",
+    "The difference between string objects, list objects, dict objects, and function objects, is that the last (functions) can execute. But strings, lists, and dicts, cannot."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "58be29e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# how can I call the function? I name it, and give it parentheses\n",
+    "\n",
+    "hello()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5487797d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# what value did this function return? We know that len() returns the length of an object,\n",
+    "# so what value did \"hello\" return?\n",
+    "\n",
+    "# answer: None, because we didn't say it should return anything else.\n",
+    "\n",
+    "x = hello()   # assign x the value we got back from calling hello"
    ]
   }
  ],
