--- a/Python first steps, day 4 -- 2022-12Dec-12.ipynb
+++ b/Python first steps, day 4 -- 2022-12Dec-12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c7feb858",
+   "id": "4c7002e5",
    "metadata": {},
    "source": [
     "# Agenda, day 4: Functions!\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1d18be1",
+   "id": "8ef0af70",
    "metadata": {},
    "source": [
     "# What are functions?\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f50d4ad",
+   "id": "7933242c",
    "metadata": {},
    "source": [
     "# To define a new function:\n",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "98bbce29",
+   "id": "2294e233",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cea7fe8",
+   "id": "a90e93c6",
    "metadata": {},
    "source": [
     "# What happens when I define a function?\n",
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "58be29e8",
+   "id": "2008e72f",
    "metadata": {},
    "outputs": [
     {
@@ -134,10 +134,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5487797d",
+   "execution_count": 3,
+   "id": "d6aedae9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello!\n"
+     ]
+    }
+   ],
    "source": [
     "# what value did this function return? We know that len() returns the length of an object,\n",
     "# so what value did \"hello\" return?\n",
@@ -145,6 +153,91 @@
     "# answer: None, because we didn't say it should return anything else.\n",
     "\n",
     "x = hello()   # assign x the value we got back from calling hello"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c82c259a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0179f16b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a function can print however much it wants on the screen, on as many lines\n",
+    "# as you want, as many times as it wants... but you only get to return one value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "32139e26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# how can we return a value? The \"return\" keyword:\n",
+    "\n",
+    "def hello():\n",
+    "    return 'Hello!'   # now our function, when called, with return a string. We can decide to print (or not)\n",
+    "\n",
+    "print(hello())        # the function is called, it returns a string, and print displays it on the screen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0f53fc99",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# DF asks: does type(hello()) return function\n",
+    "\n",
+    "type(hello())   # I run hello, and then we're running type on hello's return value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85a9276a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# but if we don't use the parentehses"
    ]
   }
  ],
