--- a/Python first steps, day 4 -- 2022-12Dec-12.ipynb
+++ b/Python first steps, day 4 -- 2022-12Dec-12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4c7002e5",
+   "id": "ebc62c26",
    "metadata": {},
    "source": [
     "# Agenda, day 4: Functions!\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ef0af70",
+   "id": "f80fe585",
    "metadata": {},
    "source": [
     "# What are functions?\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7933242c",
+   "id": "4547fc76",
    "metadata": {},
    "source": [
     "# To define a new function:\n",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2294e233",
+   "id": "461bc053",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a90e93c6",
+   "id": "9d52ffba",
    "metadata": {},
    "source": [
     "# What happens when I define a function?\n",
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2008e72f",
+   "id": "41541251",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d6aedae9",
+   "id": "30c4e394",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c82c259a",
+   "id": "a5989595",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0179f16b",
+   "id": "4ed50a9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "32139e26",
+   "id": "34e41996",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0f53fc99",
+   "id": "78459aff",
    "metadata": {},
    "outputs": [
     {
@@ -232,12 +232,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "85a9276a",
+   "execution_count": 8,
+   "id": "42861dc6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "function"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# but if we don't use the parentehses"
+    "# but if we don't use the parentheses, and thus don't call hello, but merely pass it to type...\n",
+    "type(hello)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bcd03af",
+   "metadata": {},
+   "source": [
+    "# Exercise: Calculator\n",
+    "\n",
+    "1. Write a function, `calc`, which will act as a simple calculator.  It takes no arguments, but does ask the user to enter three pieces of information:\n",
+    "    - `first`, the first number\n",
+    "    - `op`, the operator\n",
+    "    - `second`, the second number\n",
+    "2. Have t    "
    ]
   }
  ],
