--- a/Python first steps, day 4 -- 2022-12Dec-12.ipynb
+++ b/Python first steps, day 4 -- 2022-12Dec-12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ebc62c26",
+   "id": "773acc8c",
    "metadata": {},
    "source": [
     "# Agenda, day 4: Functions!\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f80fe585",
+   "id": "5a38e469",
    "metadata": {},
    "source": [
     "# What are functions?\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4547fc76",
+   "id": "f47d91ae",
    "metadata": {},
    "source": [
     "# To define a new function:\n",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "461bc053",
+   "id": "35379f6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d52ffba",
+   "id": "16beea26",
    "metadata": {},
    "source": [
     "# What happens when I define a function?\n",
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "41541251",
+   "id": "be1fa402",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "30c4e394",
+   "id": "2e83bb02",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a5989595",
+   "id": "ad64b202",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4ed50a9b",
+   "id": "c15af53d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "34e41996",
+   "id": "60be84a3",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "78459aff",
+   "id": "720cd5d7",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "42861dc6",
+   "id": "53bea4cb",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bcd03af",
+   "id": "bb3e45eb",
    "metadata": {},
    "source": [
     "# Exercise: Calculator\n",
@@ -263,8 +263,26 @@
     "    - `first`, the first number\n",
     "    - `op`, the operator\n",
     "    - `second`, the second number\n",
-    "2. Have t    "
+    "2. Have the function ask the user to enter these three pieces of information. Implement logic to handle `+` and `-`. \n",
+    "3. Return the result from this calculation as a string, including the orignal numbers and operator.\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "    First number: 5\n",
+    "    Operator: +\n",
+    "    First number: 11\n",
+    "    5 + 11 = 16\n",
+    "    \n",
+    "Do try to add some error checking, so that we don't try to turn (non-numeric) strings into integers.    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "561d455e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
