--- a/Python first steps, day 4 -- 2022-12Dec-12.ipynb
+++ b/Python first steps, day 4 -- 2022-12Dec-12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "773acc8c",
+   "id": "568f6351",
    "metadata": {},
    "source": [
     "# Agenda, day 4: Functions!\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a38e469",
+   "id": "ded091b2",
    "metadata": {},
    "source": [
     "# What are functions?\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f47d91ae",
+   "id": "71e149fc",
    "metadata": {},
    "source": [
     "# To define a new function:\n",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "35379f6f",
+   "id": "4e7a10b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16beea26",
+   "id": "cf9d9fe3",
    "metadata": {},
    "source": [
     "# What happens when I define a function?\n",
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "be1fa402",
+   "id": "0b89c556",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2e83bb02",
+   "id": "c34c83a8",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ad64b202",
+   "id": "e2430a33",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c15af53d",
+   "id": "04defda3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "60be84a3",
+   "id": "bbc687a1",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "720cd5d7",
+   "id": "a9d93d9b",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "53bea4cb",
+   "id": "2d550335",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb3e45eb",
+   "id": "993e8509",
    "metadata": {},
    "source": [
     "# Exercise: Calculator\n",
@@ -279,10 +279,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "561d455e",
+   "id": "4f0bf63a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def calc():\n",
+    "    first = input('First number: ').strip()\n",
+    "    op = "
+   ]
   }
  ],
  "metadata": {
