--- a/Python first steps, day 4 -- 2022-12Dec-12.ipynb
+++ b/Python first steps, day 4 -- 2022-12Dec-12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "568f6351",
+   "id": "fb9e8db1",
    "metadata": {},
    "source": [
     "# Agenda, day 4: Functions!\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ded091b2",
+   "id": "88cc3839",
    "metadata": {},
    "source": [
     "# What are functions?\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71e149fc",
+   "id": "23f407e7",
    "metadata": {},
    "source": [
     "# To define a new function:\n",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4e7a10b1",
+   "id": "2e836f5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf9d9fe3",
+   "id": "b05b4124",
    "metadata": {},
    "source": [
     "# What happens when I define a function?\n",
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0b89c556",
+   "id": "2c265254",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c34c83a8",
+   "id": "10eb94fe",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e2430a33",
+   "id": "2a941846",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "04defda3",
+   "id": "5e112173",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bbc687a1",
+   "id": "d8dd866d",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a9d93d9b",
+   "id": "b6039ea1",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2d550335",
+   "id": "342f91a1",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "993e8509",
+   "id": "fd49192a",
    "metadata": {},
    "source": [
     "# Exercise: Calculator\n",
@@ -278,15 +278,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4f0bf63a",
+   "execution_count": 9,
+   "id": "a502370a",
    "metadata": {},
    "outputs": [],
    "source": [
     "def calc():\n",
     "    first = input('First number: ').strip()\n",
-    "    op = "
+    "    op = input('Operator: ').strip()\n",
+    "    second = input('Second number: ').strip()\n",
+    "    \n",
+    "    if first.isdigit() and second.isdigit():\n",
+    "        first = int(first)\n",
+    "        second = int(second)\n",
+    "        \n",
+    "        if op == '+':\n",
+    "            result = first + second\n",
+    "            \n",
+    "        elif op == '-':\n",
+    "            result = first - second\n",
+    "            \n",
+    "        else:\n",
+    "            result = 'Not supported'\n",
+    "            \n",
+    "        print(f'{first} {op} {second} = {result}')\n",
+    "        \n",
+    "    else:\n",
+    "        \n",
+    "        print(f'{first} and {second} must both be numeric')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3c26277d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First number: 11\n",
+      "Operator: +\n",
+      "Second number: 5\n",
+      "11 + 5 = 16\n"
+     ]
+    }
+   ],
+   "source": [
+    "calc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8f523283",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First number: 20\n",
+      "Operator: -\n",
+      "Second number: 8\n",
+      "20 - 8 = 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "calc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f0a7b06",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
