--- a/Python first steps, day 4 -- 2022-12Dec-12.ipynb
+++ b/Python first steps, day 4 -- 2022-12Dec-12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ef3401bb",
+   "id": "ef02a196",
    "metadata": {},
    "source": [
     "# Agenda, day 4: Functions!\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9591eb8f",
+   "id": "7c894597",
    "metadata": {},
    "source": [
     "# What are functions?\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78761df7",
+   "id": "716ad2cd",
    "metadata": {},
    "source": [
     "# To define a new function:\n",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f87d9b78",
+   "id": "ca5bb37c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "245fd45f",
+   "id": "206247c4",
    "metadata": {},
    "source": [
     "# What happens when I define a function?\n",
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2a539112",
+   "id": "f059886d",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d6b57af9",
+   "id": "1a88c1dc",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d177be76",
+   "id": "8dc1c2ab",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "266df7f0",
+   "id": "5e1ffed2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fe4b755d",
+   "id": "b844e02e",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "664ab3e6",
+   "id": "49fa1953",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ac2ea259",
+   "id": "6d772e37",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b76ccc3",
+   "id": "74c44e8f",
    "metadata": {},
    "source": [
     "# Exercise: Calculator\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4e268c9c",
+   "id": "cf8f61ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "82dde095",
+   "id": "4e3f2974",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "98e9ffaf",
+   "id": "80cc7f82",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4a3c55d",
+   "id": "00b71d0e",
    "metadata": {},
    "source": [
     "# Arguments and parameters\n",
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ad51de85",
+   "id": "14d821cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d67faf0e",
+   "id": "a627b570",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6c7a6a2f",
+   "id": "9e7119d1",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a3f6baff",
+   "id": "94ebea52",
    "metadata": {},
    "outputs": [
     {
@@ -442,9 +442,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a71572ed",
+   "metadata": {},
+   "source": [
+    "# Recap on simple parameters\n",
+    "\n",
+    "1. If I want to write a function that takes one or more arguments, it'll need to have the same number of parameters.\n",
+    "2. When the function is called, we'll need to provide arguments that'll be assigned to those parameters."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f80ef66",
+   "metadata": {},
+   "source": [
+    "# Exercise: Rewrite `calc` to use parameters\n",
+    "\n",
+    "1. Rewrite the `calc` program we just did (you can use my version, if you want!), so that it takes `first`, `op`, and `second` as arguments to the function.  We won't use `input` inside of the function any more.\n",
+    "2. Aside from getting the values passed as arguments, you shouldn't have to make many (any?) changes.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac89603b",
+   "id": "3c940ad8",
    "metadata": {},
    "outputs": [],
    "source": []
