--- a/Python first steps, day 4 -- 2022-12Dec-12.ipynb
+++ b/Python first steps, day 4 -- 2022-12Dec-12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ef02a196",
+   "id": "a270d70b",
    "metadata": {},
    "source": [
     "# Agenda, day 4: Functions!\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c894597",
+   "id": "9d284844",
    "metadata": {},
    "source": [
     "# What are functions?\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "716ad2cd",
+   "id": "1682405f",
    "metadata": {},
    "source": [
     "# To define a new function:\n",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ca5bb37c",
+   "id": "43dc0332",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "206247c4",
+   "id": "0e99a082",
    "metadata": {},
    "source": [
     "# What happens when I define a function?\n",
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f059886d",
+   "id": "8dd13ef4",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1a88c1dc",
+   "id": "1336a1ce",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8dc1c2ab",
+   "id": "66a574fc",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5e1ffed2",
+   "id": "708d6437",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b844e02e",
+   "id": "7b285492",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "49fa1953",
+   "id": "d57dca03",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6d772e37",
+   "id": "75f6b5bd",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74c44e8f",
+   "id": "7776c469",
    "metadata": {},
    "source": [
     "# Exercise: Calculator\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cf8f61ed",
+   "id": "e353036d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4e3f2974",
+   "id": "909fd4c0",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "80cc7f82",
+   "id": "49ac1f75",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00b71d0e",
+   "id": "882627c3",
    "metadata": {},
    "source": [
     "# Arguments and parameters\n",
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "14d821cb",
+   "id": "eda6489a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a627b570",
+   "id": "b20a5095",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9e7119d1",
+   "id": "92e3f067",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "94ebea52",
+   "id": "de5dcdd9",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a71572ed",
+   "id": "97c0f8c2",
    "metadata": {},
    "source": [
     "# Recap on simple parameters\n",
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f80ef66",
+   "id": "5e5a6017",
    "metadata": {},
    "source": [
     "# Exercise: Rewrite `calc` to use parameters\n",
@@ -467,10 +467,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c940ad8",
+   "id": "15238492",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def calc(first, op, second):  # all three of these are now parameters\n",
+    "    \n",
+    "    if first.isdigit() and second.isdigit():\n",
+    "        first = int(first)\n",
+    "        second = int(second)\n",
+    "        \n",
+    "        if op == '+':\n",
+    "            result = first + second\n",
+    "            \n",
+    "        elif op == '-':\n",
+    "            result = first - second\n",
+    "            \n",
+    "        else:\n",
+    "            result = 'Not supported'\n",
+    "            \n",
+    "        print(f'{first} {op} {second} = {result}')\n",
+    "        \n",
+    "    else:\n",
+    "        \n",
+    "        print(f'{first} and {second} must both be numeric')"
+   ]
   }
  ],
  "metadata": {
