--- a/Python first steps, day 4 -- 2022-12Dec-12.ipynb
+++ b/Python first steps, day 4 -- 2022-12Dec-12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b99a3562",
+   "id": "df50a751",
    "metadata": {},
    "source": [
     "# Agenda, day 4: Functions!\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9c19f00",
+   "id": "5c77665a",
    "metadata": {},
    "source": [
     "# What are functions?\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8832ebd3",
+   "id": "a74a57cf",
    "metadata": {},
    "source": [
     "# To define a new function:\n",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "65f0ceef",
+   "id": "5d0b6c1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a2a07b4",
+   "id": "ba92c76f",
    "metadata": {},
    "source": [
     "# What happens when I define a function?\n",
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5e7f43f0",
+   "id": "474f324a",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "65448a2d",
+   "id": "a9546ae6",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a13111ab",
+   "id": "a6740f9c",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b71f8d08",
+   "id": "a3a2bd2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "292577ab",
+   "id": "0a8d00d5",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e3886737",
+   "id": "9c5c07ed",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4959bc44",
+   "id": "cc572385",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99b1efbe",
+   "id": "43db5113",
    "metadata": {},
    "source": [
     "# Exercise: Calculator\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d5e9f20b",
+   "id": "c10fafff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "407c5c05",
+   "id": "fefb88e7",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5f8c7d1f",
+   "id": "c712631c",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "100139b0",
+   "id": "9d63d7ce",
    "metadata": {},
    "source": [
     "# Arguments and parameters\n",
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "312c5b68",
+   "id": "76efad19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "11496788",
+   "id": "52f8e0d5",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f8ac451e",
+   "id": "7bb3e560",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "fd15d511",
+   "id": "d7f80260",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5307ac4b",
+   "id": "39fa8f94",
    "metadata": {},
    "source": [
     "# Recap on simple parameters\n",
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cda9b866",
+   "id": "3570b94d",
    "metadata": {},
    "source": [
     "# Exercise: Rewrite `calc` to use parameters\n",
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3e343a90",
+   "id": "ea734445",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "e85542c6",
+   "id": "a1814a34",
    "metadata": {},
    "outputs": [
     {
@@ -517,10 +517,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7e4848e",
+   "id": "7736c818",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# What happens here:\n",
+    "\n",
+    "x = 5\n",
+    "\n",
+    "x = 7\n",
+    "\n",
+    "print()"
+   ]
   }
  ],
  "metadata": {
