--- a/Python first steps, day 4 -- 2022-12Dec-12.ipynb
+++ b/Python first steps, day 4 -- 2022-12Dec-12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "01b34bae",
+   "id": "071f426a",
    "metadata": {},
    "source": [
     "# Agenda, day 4: Functions!\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "865adfdc",
+   "id": "1339d664",
    "metadata": {},
    "source": [
     "# What are functions?\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce84056a",
+   "id": "c35fceea",
    "metadata": {},
    "source": [
     "# To define a new function:\n",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "36789598",
+   "id": "91431c4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0add0e26",
+   "id": "db081af3",
    "metadata": {},
    "source": [
     "# What happens when I define a function?\n",
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c90fb8b6",
+   "id": "f08c0b22",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "69d7b181",
+   "id": "226ceeee",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ba9b0acc",
+   "id": "0581f9a3",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "81e37d4e",
+   "id": "f081a46c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "63ac6c5b",
+   "id": "b6b9721d",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b1e022e6",
+   "id": "8bafb142",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "effae87c",
+   "id": "7c604a64",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50225677",
+   "id": "799289ac",
    "metadata": {},
    "source": [
     "# Exercise: Calculator\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1ef5c334",
+   "id": "f93f1a23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b1615561",
+   "id": "b6471309",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2bb2ab0b",
+   "id": "f3d59c8d",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb0fe780",
+   "id": "96f8593e",
    "metadata": {},
    "source": [
     "# Arguments and parameters\n",
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ad054c95",
+   "id": "86a77fa1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "394a29c7",
+   "id": "1273e58a",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e75ab040",
+   "id": "cf50b8ec",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3e6e4d70",
+   "id": "9d507c56",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d057f83b",
+   "id": "017d045f",
    "metadata": {},
    "source": [
     "# Recap on simple parameters\n",
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c26eea9f",
+   "id": "c130f8f1",
    "metadata": {},
    "source": [
     "# Exercise: Rewrite `calc` to use parameters\n",
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "69d7aa47",
+   "id": "d45f0c19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "761e39a6",
+   "id": "a75bef50",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "eefe967d",
+   "id": "87a43257",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "59cdf646",
+   "id": "d85ca78c",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45561260",
+   "id": "73e5f3fd",
    "metadata": {},
    "source": [
     "# Next up:\n",
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cbeff2c",
+   "id": "ceddb9db",
    "metadata": {},
    "source": [
     "# Return values\n",
@@ -594,16 +594,79 @@
     "\n",
     "But if we print from the function, then there isn't any way to \"capture\" that return value, and do something with it.\n",
     "\n",
-    "For that reason, it's a good idea to `return` values from functions, and not `print` them.  If you `return`, you have lots of options -- but if you `print`, you've basically boxed yourself into a "
+    "For that reason, it's a good idea to `return` values from functions, and not `print` them.  If you `return`, you have lots of options -- but if you `print`, you've basically boxed yourself into a corner.\n",
+    "\n",
+    "The keyword `return` in a function immediately returns that value from the function to the caller. You can return any data type you want!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "f41702d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hello(name):\n",
+    "    return f'Hello, {name}!'    # when I execute this function, it'll return a new string based on name\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "12d978f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello, world!'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# In Jupyter, if the final line of a cell is an expression (i.e., has a value), then it's displayed\n",
+    "# so it's easy to be fooled into thinking that this code prints something on the screen:\n",
+    "\n",
+    "hello('world')\n",
+    "\n",
+    "# Normally, in Python, if you don't print something, it doesn't appear."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37e017be",
+   "id": "ae550428",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# how can I rewrite calc so that it returns a string, rather than printing one?\n",
+    "\n",
+    "def calc(first, op, second):  # all three of these are now parameters\n",
+    "    \n",
+    "    if first.isdigit() and second.isdigit():   # first and second still need to be strings!\n",
+    "        first = int(first)\n",
+    "        second = int(second)\n",
+    "        \n",
+    "        if op == '+':\n",
+    "            result = first + second\n",
+    "            \n",
+    "        elif op == '-':\n",
+    "            result = first - second\n",
+    "            \n",
+    "        else:\n",
+    "            result = 'Not supported'\n",
+    "            \n",
+    "        return f'{first} {op} {second} = {result}')\n",
+    "        \n",
+    "    else:\n",
+    "        \n",
+    "        print(f'{first} and {second} must both be numeric')"
+   ]
   }
  ],
  "metadata": {
